--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ paypal-checkout-serversdk>=1.0.1,<2.0
 # Web server and static files
 gunicorn>=21.2.0,<22.0
 whitenoise>=6.6.0,<7.0
+django-compressor>=4.4,<5.0
 
 # Additional utilities
 requests>=2.31.0,<3.0
